# goit-pythonweb-hw-012

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.db
docs/: conf.py  index.rst
docs/source/: modules.rst  src.rst  src.schemas.rst  src.services.rst  tests.rst
migrations/: env.py
migrations/versions/: 179443bc45ea_migration_with_users.py
postgres-data/: postmaster.pid
postgres-data/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
postgres-data/base/5/: 1247  1249  1249_fsm  1259  16384  16387  16389  16395  16396  16398  16400  16402  16408  16409  16411  16413  2224  24613  24616  24623  24624  24629  24630  24632  24634  24636  24637  24642  24643  24645  24647  2579  2604  2606  2608  2609  2610  2615  2620  2656  (+28 more)
postgres-data/global/: 1260  pg_control  pg_internal.init
postgres-data/pg_stat/: pgstat.stat
postgres-data/pg_xact/: 0000
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/database/: models.py
src/repository/: contacts.py  users.py
src/schemas/: contacts.py
src/services/: auth.py  contacts.py  email.py
src/services/templates/: reset_password.html
src/utils/: constants.py
tests/: conftest.py  test_contact_repository_unit.py  test_integartion_contacts.py  test_integration_auth.py  test_integration_users.py  test_integration_utils.py  test_user_repository_unit.py
