[tool.poetry]
name = "goit-pythonweb-hw-12"
version = "0.1.0"
description = ""
authors = ["kryvosheyin <alex.kryvosheyin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pycryptodome = "^3.18.0"
fastapi = {extras = ["standard"], version = "^0.115.6"}
uvicorn = "^0.33.0"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
pydantic = "^2.10.3"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
alembic = "^1.14.0"
pydantic-settings = "^2.7.0"
slowapi = "^0.1.9"
passlib = "^1.7.4"
jose = "^1.0.0"
fastapi-mail = "^1.4.2"
cloudinary = "^1.41.0"
libgravatar = "^1.0.4"
jwt = "^1.3.1"
python-jose = "^3.3.0"
logger = "^1.4"
aiocache = "^0.12.3"
aioredis = "^2.0.1"
aiosqlite = "^0.20.0"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.1"
pytest-cov = "^6.0.0"
sphinx = "^8.1.3"
bcrypt = "4.0.1"
redis = "^5.2.1"


[tool.poetry.group.dev.dependencies]
sphinx = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
